--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="YOUR API KEY" />
+            android:value="AIzaSyD8oR2b_5zh7ZJdYvoOHGmJ4qT0E8cXoWw" />
     </application>
 
 </manifest>
